Name: p3-fPromela
Version: 0.1
Cabal-Version:  >= 1.2
Author: Ahmad Salim Al-Sibahi
Synopsis: Parser and Transformation tool for fPromela
Build-Type: Simple

Flag Debug
  Description: Enable debug support
  Default:     False

Executable p3-fpromela
  Build-Depends: base, parsec, pretty, containers, mtl>=2.2, set-monad, monad-loops, uniplate, language-c, cmdlib, HSH, sbv
  Main-Is: Main.hs
  Hs-Source-Dirs: src
  Other-Modules:
    FPromela.Ast, FPromela.Lexer, FPromela.Parser, FPromela.Pretty,
    TVL.Ast, TVL.Lexer, TVL.Parser,
    Transformation.Configurations, Transformation.Formulae, Transformation.Abstraction, Transformation.Transformation

  if flag(debug)
    CC-Options: "-DDEBUG"
    CPP-Options: -DDEBUG
