Name: p3-fPromela
Version: 0.1
Cabal-Version:  >= 1.2
Author: Ahmad Salim Al-Sibahi
Synopsis: Parser and Transformation tool for fPromela
Build-Type: Simple

Flag Debug
  Description: Enable debug support
  Default:     False

Library
 Build-Depends: base, parsec, pretty, containers, mtl>=2.2, set-monad, monad-loops, uniplate, language-c, sbv
 Hs-Source-Dirs: src
 Exposed-Modules:
    FPromela.Ast, FPromela.Lexer, FPromela.Parser, FPromela.Pretty,
    TVL.Ast, TVL.Lexer, TVL.Parser,
    Transformation.Configurations, Transformation.Formulae, Transformation.Abstraction, Transformation.Transformation

Executable p3-fpromela
  Build-Depends: cmdlib, HSH
  Hs-Source-Dirs: p3-fpromela
  Main-Is: Main.hs
  if flag(debug)
    CC-Options: "-DDEBUG"
    CPP-Options: -DDEBUG
