Name: p3-tool
Version: 0.1
Cabal-Version:  >= 1.8
Author: Ahmad Salim Al-Sibahi
Synopsis: Parser and Transformation tool for fPromela
Build-Type: Simple

Flag Debug
  Description: Enable debug support
  Default:     False

Library
 Build-Depends: base, parsec, pretty, containers, mtl>=2.2, set-monad, monad-loops, uniplate, language-c, sbv
 Hs-Source-Dirs: p3-tool
 Exposed-Modules:
    FPromela.Ast, FPromela.Lexer, FPromela.Parser, FPromela.Pretty,
    TVL.Ast, TVL.Lexer, TVL.Parser, TVL.Pretty,
    Abstraction.Ast, Abstraction.Parser,
    Transformation.Configurations, Transformation.Formulae, Transformation.Abstraction, Transformation.Transformation

Executable p3-fpromela
  Build-Depends: p3-tool, base, containers, set-monad, mtl>=2.2, parsec, cmdlib, HSH, filepath
  Hs-Source-Dirs: p3-fpromela
  Main-Is: Main.hs
  if flag(debug)
    CC-Options: "-DDEBUG"
    CPP-Options: -DDEBUG

Executable p3-spin
  Build-Depends: p3-tool, base, containers, set-monad, mtl>=2.2, parsec, process, cmdlib, HSH, filepath, temporary
  Hs-Source-Dirs: p3-spin
  Main-Is: Main.hs
  if flag(debug)
    CC-Options: "-DDEBUG"
    CPP-Options: -DDEBUG
