Name: p3-tool
Version: 1.4
Cabal-Version:  >= 1.8
Author: Ahmad Salim Al-Sibahi
Synopsis: Parser and Transformation tool for fPromela
Build-Type: Simple
License: GPL-3
License-File: LICENSE

Flag Debug
  Description: Enable debug support
  Default:     False

Library
 Build-Depends: base, containers, cpphs >= 1.20.1, directory >= 1.2.6.2, filepath >= 1.4.1.0, language-c, monad-loops, mtl>=2.2, optparse-applicative >= 0.13.0.0, parsec, pretty, process >= 1.4.2.0, sbv, set-monad, temporary >= 1.2.0.4, uniplate
 Hs-Source-Dirs: p3-tool
 Exposed-Modules:
    FPromela.Ast, FPromela.Lexer, FPromela.Parser, FPromela.Pretty,
    TVL.Ast, TVL.Lexer, TVL.Parser, TVL.Pretty, TVL.Util,
    Abstraction.Ast, Abstraction.Parser,
    Transformation.Configurations, Transformation.Formulae, Transformation.Abstraction, Transformation.Transformation

Executable p3-fpromela
  Build-Depends: base, containers, cpphs >= 1.20.1, directory >= 1.2.6.2, directory>=1.2.2, filepath, filepath >= 1.4.1.0, mtl>=2.2, optparse-applicative, p3-tool, parsec, set-monad
  Hs-Source-Dirs: p3-fpromela
  Main-Is: Main.hs
  if flag(debug)
    CC-Options: "-DDEBUG"
    CPP-Options: -DDEBUG

Executable p3-spin
  Build-Depends: base, containers, cpphs >= 1.20.1, directory >= 1.2.6.2, directory>=1.2.2, filepath >= 1.4.1.0, mtl>=2.2, optparse-applicative, p3-tool, parsec, process >= 1.4.2.0, set-monad, temporary >= 1.2.0.4
  Hs-Source-Dirs: p3-spin
  Main-Is: Main.hs
  if flag(debug)
    CC-Options: "-DDEBUG"
    CPP-Options: -DDEBUG
  if os(windows)
    Buildable: False
